--- a/products.html
+++ b/products.html
@@ -166,15 +166,15 @@
     }
 
     /* Tabs styles */
-    .card-title{
+    .card-title {
       text-align: center;
     }
 
-    .card-text{
+    .card-text {
       text-align: left;
     }
 
-    .tabcontent img{
+    .tabcontent img {
       height: 350px;
     }
 
@@ -216,7 +216,7 @@
       /* height: 150%; */
       text-align: left;
       font-size: 1rem;
-      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
     }
   </style>
 </head>
@@ -236,10 +236,13 @@
                 <div class=divBox><a class=headernc href="ourteam.html"><br>OUR TEAM</a></div>
 
               <td align=center class=munarchivec width=16%>
-                <div class=divBox><a class=headerc href="projects.html"><br>OUR PRODUCTS</a></div>
+                <div class=divBox><a class=headerc href="#"><br>OUR PRODUCTS</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="exhibition.html"><br>EXHIBITIONS</a></div>
               <td align=center class=munarchivenc width=16%>
                 <div class=divBox><a class=headernc href="contact.html"><br>CONTACT US</a></div>
               </td>
+        </td>
         </td>
         </td>
         </td>
