--- a/ourteam.html
+++ b/ourteam.html
@@ -1,219 +1,276 @@
 <html>
+
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123321659-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123321659-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-123321659-1');
-</script>
-<title>Our Team | Arihant Reclamation Pvt. Ltd. | Manufacturers, Exporters of Rubber Chemicals Accelerator MBT, MBTS, CBS, TMT, Zinc Oxide in India</title>
-<meta charset="utf-8">
-<style>
-a.saa {
-background: rgba(255,255,255,0.5);
-}
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-td.munarchivec {
-background-color: #00BFFF;
-}
+    gtag('config', 'UA-123321659-1');
+  </script>
+  <title>Our Team | Arihant Reclamation Pvt. Ltd. | Manufacturers, Exporters of Rubber Chemicals Accelerator MBT, MBTS, CBS, TMT, Zinc Oxide in India</title>
+  <meta charset="utf-8">
+  <style>
+    a.saa {
+      background: rgba(255, 255, 255, 0.5);
+    }
 
-td.munarchivenc:hover {
-background-color: #00BFFF;
-}
+    td.munarchivec {
+      background-color: #00BFFF;
+    }
 
-a.headerc {
-text-decoration: none;
-color: white;
-font-family: "Century gothic";
-font-size: 14px;
-}
+    td.munarchivenc:hover {
+      background-color: #00BFFF;
+    }
 
-a.headernc {
-text-decoration: none;
-color: white;
-font-family: "Century gothic";
-font-size: 14px;
-}
+    a.headerc {
+      text-decoration: none;
+      color: white;
+      font-family: "Century gothic";
+      font-size: 14px;
+    }
 
-@font-face {
-    font-family: "Open Sans Extrabold";
-    src: url(OpenSans-ExtraBold.ttf);
-}
+    a.headernc {
+      text-decoration: none;
+      color: white;
+      font-family: "Century gothic";
+      font-size: 14px;
+    }
 
-div {
-   font-family: "Open Sans Extrabold";
-}
+    @font-face {
+      font-family: "Open Sans Extrabold";
+      src: url(OpenSans-ExtraBold.ttf);
+    }
 
-.button
-{
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  text-align: center;
-  color: #0C5;
+    div {
+      font-family: "Open Sans Extrabold";
+    }
 
-  font-size: 12px;
-  font-family: "Nunito", sans-serif;
-  font-weight: 300;
-  
-  margin: 5em auto;
-  
-  top:0; right:0; bottom:0; left:0;
-  
-  padding: 15px 0;
-  width: 220px;
-  height:30px;
+    .button {
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-align: center;
+      color: #0C5;
 
-  background: #2E9AFE;
-  border: 1px solid #2E9AFE;
-  color: #F2F2F2;
-  overflow: hidden;
-  
-  transition: all 0.5s;
-}
+      font-size: 12px;
+      font-family: "Nunito", sans-serif;
+      font-weight: 300;
 
-.button:hover, .button:active 
-{
-  text-decoration: none;
-  color: #2E9AFE;
-  border-color: #2E9AFE;
-  background: #F2F2F2;
-}
+      margin: 5em auto;
 
-.button span 
-{
-  display: inline-block;
-  position: relative;
-  padding-right: 0;
-  
-  transition: padding-right 0.5s;
-}
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
 
-.button span:after 
-{
-  content: ' ';  
-  position: absolute;
-  top: 0;
-  right: -18px;
-  opacity: 0;
-  width: 10px;
-  height: 10px;
-  margin-top: -10px;
+      padding: 15px 0;
+      width: 220px;
+      height: 30px;
 
-  background: rgba(0, 0, 0, 0);
-  border: 3px solid #FFF;
-  border-top: none;
-  border-right: none;
+      background: #2E9AFE;
+      border: 1px solid #2E9AFE;
+      color: #F2F2F2;
+      overflow: hidden;
 
-  transition: opacity 0.5s, top 0.5s, right 0.5s;
-  transform: rotate(-45deg);
-}
+      transition: all 0.5s;
+    }
 
-.button:hover span, .button:active span 
-{
-  padding-right: 30px;
-}
+    .button:hover,
+    .button:active {
+      text-decoration: none;
+      color: #2E9AFE;
+      border-color: #2E9AFE;
+      background: #F2F2F2;
+    }
 
-.button:hover span:after, .button:active span:after 
-{
-  transition: opacity 0.5s, top 0.5s, right 0.5s;
-  opacity: 1;
-  border-color: #0C5;
-  right: 0;
-  top: 50%;
-}
+    .button span {
+      display: inline-block;
+      position: relative;
+      padding-right: 0;
 
-@import url(http://fonts.googleapis.com/css?family=Nunito:300);
+      transition: padding-right 0.5s;
+    }
 
-body { font-family: "Nunito", sans-serif; font-size: 24px; }
-a    { text-decoration: none; }
-p    { text-align: center; }
-sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
+    .button span:after {
+      content: ' ';
+      position: absolute;
+      top: 0;
+      right: -18px;
+      opacity: 0;
+      width: 10px;
+      height: 10px;
+      margin-top: -10px;
 
-.divBox
-{
-    width: 100%;
-    height: 50px;
-}
+      background: rgba(0, 0, 0, 0);
+      border: 3px solid #FFF;
+      border-top: none;
+      border-right: none;
 
-.divBox a
-{
-    width: 100%;
-    height: 100%;
-    display: block;
-}
+      transition: opacity 0.5s, top 0.5s, right 0.5s;
+      transform: rotate(-45deg);
+    }
 
-</style>
+    .button:hover span,
+    .button:active span {
+      padding-right: 30px;
+    }
+
+    .button:hover span:after,
+    .button:active span:after {
+      transition: opacity 0.5s, top 0.5s, right 0.5s;
+      opacity: 1;
+      border-color: #0C5;
+      right: 0;
+      top: 50%;
+    }
+
+    @import url(http://fonts.googleapis.com/css?family=Nunito:300);
+
+    body {
+      font-family: "Nunito", sans-serif;
+      font-size: 24px;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    p {
+      text-align: center;
+    }
+
+    sup {
+      font-size: 36px;
+      font-weight: 100;
+      line-height: 55px;
+    }
+
+    .divBox {
+      width: 100%;
+      height: 50px;
+    }
+
+    .divBox a {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  </style>
 </head>
-<body width=100% style="padding:0px; margin:0px; " bgcolor="#F2F2F2">
-<table width=100% style="position:fixed; ">
-<table cellpadding=0 cellspacing=0 bgcolor=#424242 width=100% height=50px align=center style="position:fixed; ">
-<tr>
-<td><table align=center width=60% height=100% cellpadding=0 cellspacing=0>
-<tr>
-<td align=center class=munarchivenc width=16%><div class=divBox><a class=headernc href="index.html"><br>HOME</a></div>
-<td align=center class=munarchivenc width=16%><div class=divBox><a class=headernc href="aboutus.html"><br>ABOUT US</a></div>
-<td align=center class=munarchivec width=16%><div class=divBox><a class=headerc href="ourteam.html"><br>OUR TEAM</a></div>
 
-<td align=center class=munarchivenc width=16%><div class=divBox><a class=headernc href="products.html"><br>OUR PRODUCTS</a></div>
-<td align=center class=munarchivenc width=16%><div class=divBox><a class=headernc href="contact.html"><br>CONTACT US</a></div>
-</td></td></td></td></td></tr></table></td></tr></table>
-<table width=70% align=center cellpadding="60">
-<tr>
-<td align=left><a href="index.html"><img src=logo.png height="160" width="400"></a>
-<td align=right><img src="line.jpg" height=130>
-<td align=left><font color="#2E2E2E" face="Century gothic" size=4>MBT Accelerator <br> MBTS Accelerator <br> CBS Accelerator<br><a href="./products.html" style="text-decoration: none; color: #2E2E2E; font-weight: bold;">View All Products >> </a><br>
-</font></td></td></td></tr></table>
-<table align=center height=300px width="100%" cellspacing=30 cellpadding="30" background=otbg.jpg>
-	<tr>
-		<td align=center>
-		<font color=#E6E6E6 face="century gothic" size=7>
-			OUR TEAM
-		</font><br><br>
-		<img src="hline.png" height="2px" width="280px">
-		</td>
-	</tr>
-</table>
-<table width="100%" cellpadding="40" cellspacing="0" bgcolor="#FFFFFF">
-  <tr>
-    <td align="right" width=30% style="vertical-align: top; ">
-      <h1><font face="century gothic"><font color=#585858>ABOUT THE<br>TEAM</font></font></h1>
+<body width=100% style="padding:0px; margin:0px; " bgcolor="#F2F2F2">
+  <table width=100% style="position:fixed; ">
+    <table cellpadding=0 cellspacing=0 bgcolor=#424242 width=100% height=50px align=center style="position:fixed; ">
+      <tr>
+        <td>
+          <table align=center width=60% height=100% cellpadding=0 cellspacing=0>
+            <tr>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="index.html"><br>HOME</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="aboutus.html"><br>ABOUT US</a></div>
+              <td align=center class=munarchivec width=16%>
+                <div class=divBox><a class=headerc href="ourteam.html"><br>OUR TEAM</a></div>
+
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="products.html"><br>OUR PRODUCTS</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="exhibition.html"><br>EXHIBITIONS</a></div>
+              <td align=center class=munarchivenc width=16%>
+                <div class=divBox><a class=headernc href="contact.html"><br>CONTACT US</a></div>
+              </td>
+        </td>
+        </td>
+        </td>
+        </td>
+        </td>
+      </tr>
+    </table>
     </td>
-    <td align=left width=70%>
-      <font size="3px" face="century gothic"><b>Mr. Rajesh Mittal</b><br><br>The Director of  the company, Mr. Rajesh Mittal, who has a working experience in the field of rubbers and chemicals of more than 29 years. He has a graduate degree in Commerce (1989).<br><br>
-He is one of finest and most knowledgeable people in rubbers and chemicals industry with a great business acumen. 
-      <br><br>
-    </td>
-  </tr>
-</table>
-<table width="100%" cellpadding="40" cellspacing="0" bgcolor="#E6E6E6">
-<tr>
-    <td align="right" width=30% style="vertical-align: top; ">
-      <h1><font face="century gothic"><font color=#585858>CUSTOMER<br>SATISFACTION</font></font></h1>
-    </td>
-    <td align=left width=70%>
-      <font face="century gothic" color="#424242"><img src="ap.png" height="50px" width="40px"><br><br><br>You can't expect your employees to exceed the expectations of the customers if you don't exceed the employees' expectations of management. <br><br> - Howard Schultz
-      <br><br><img src="ap1.jpg" height="50px" width="40px" align="right">
-      </font></td></tr></table>
-<table align="center" width=100% bgcolor="#424242">
-  <tr>
-    <td align=center>
-    <br><br>
-      <font color=#FAFAFA size=5px face="century gothic">
-        <b>Reach Us Now!</b>
-        <br><br><br>      
-      </font>
-      <font color=#FAFAFA size=5px face="century gothic">
-        <b>+91-9811041433, +91-8860732624 </b><br><font color=#FAFAFA size=4px face="century gothic"><b>Mailing address: </b>arihantreclamationpvtltd@gmail.com<br>arihantreclamationprivateltd@rediffmail.com</font>
-        <br><br>      
-      </font>
-      <font color=#FAFAFA size=4.5px face="century gothic">
-        &copy; &reg; <b>Arihant Reclamation Pvt. Ltd.</b> 2018. All Rights Reserved.<br>
-        </u>  </a>  
-      </font>
-    </td>
-  </tr>
-</table>
-</table></body></html>
+    </tr>
+  </table>
+  <table width=70% align=center cellpadding="60">
+    <tr>
+      <td align=left><a href="index.html"><img src=logo.png height="160" width="400"></a>
+      <td align=right><img src="line.jpg" height=130>
+      <td align=left>
+        <font color="#2E2E2E" face="Century gothic" size=4>MBT Accelerator <br> MBTS Accelerator <br> CBS Accelerator<br><a href="./products.html" style="text-decoration: none; color: #2E2E2E; font-weight: bold;">View All Products >> </a><br>
+        </font>
+      </td>
+      </td>
+      </td>
+    </tr>
+  </table>
+  <table align=center height=300px width="100%" cellspacing=30 cellpadding="30" background=otbg.jpg>
+    <tr>
+      <td align=center>
+        <font color=#E6E6E6 face="century gothic" size=7>
+          OUR TEAM
+        </font><br><br>
+        <img src="hline.png" height="2px" width="280px">
+      </td>
+    </tr>
+  </table>
+  <table width="100%" cellpadding="40" cellspacing="0" bgcolor="#FFFFFF">
+    <tr>
+      <td align="right" width=30% style="vertical-align: top; ">
+        <h1>
+          <font face="century gothic">
+            <font color=#585858>ABOUT THE<br>TEAM</font>
+          </font>
+        </h1>
+      </td>
+      <td align=left width=70%>
+        <font size="3px" face="century gothic"><b>Mr. Rajesh Mittal</b><br><br>The Director of the company, Mr. Rajesh Mittal, who has a working experience in the field of rubbers and chemicals of more than 29 years. He has a graduate degree in
+          Commerce (1989).<br><br>
+          He is one of finest and most knowledgeable people in rubbers and chemicals industry with a great business acumen.
+          <br><br>
+      </td>
+    </tr>
+  </table>
+  <table width="100%" cellpadding="40" cellspacing="0" bgcolor="#E6E6E6">
+    <tr>
+      <td align="right" width=30% style="vertical-align: top; ">
+        <h1>
+          <font face="century gothic">
+            <font color=#585858>CUSTOMER<br>SATISFACTION</font>
+          </font>
+        </h1>
+      </td>
+      <td align=left width=70%>
+        <font face="century gothic" color="#424242"><img src="ap.png" height="50px" width="40px"><br><br><br>You can't expect your employees to exceed the expectations of the customers if you don't exceed the employees' expectations of management.
+          <br><br> - Howard Schultz
+          <br><br><img src="ap1.jpg" height="50px" width="40px" align="right">
+        </font>
+      </td>
+    </tr>
+  </table>
+  <table align="center" width=100% bgcolor="#424242">
+    <tr>
+      <td align=center>
+        <br><br>
+        <font color=#FAFAFA size=5px face="century gothic">
+          <b>Reach Us Now!</b>
+          <br><br><br>
+        </font>
+        <font color=#FAFAFA size=5px face="century gothic">
+          <b>+91-9811041433, +91-8860732624 </b><br>
+          <font color=#FAFAFA size=4px face="century gothic"><b>Mailing address: </b>arihantreclamationpvtltd@gmail.com<br>arihantreclamationprivateltd@rediffmail.com</font>
+          <br><br>
+        </font>
+        <font color=#FAFAFA size=4.5px face="century gothic">
+          &copy; &reg; <b>Arihant Reclamation Pvt. Ltd.</b> 2018. All Rights Reserved.<br>
+          </u> </a>
+        </font>
+      </td>
+    </tr>
+  </table>
+  </table>
+</body>
+
+</html>
